--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -29,8 +29,7 @@
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
-    "eslint": "^8.54.0",
-    "prisma": "^5.6.0"
+    "eslint": "^8.54.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.25.0"
