--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,6 +14,7 @@
     }
   },
   "scripts": {
+    "db": "pnpm prisma --",
     "lint": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
